--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scully-plugin-mermaid",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -36,6 +36,7 @@
     "@scullyio/scully": "^1.0.0-beta.2",
     "jsdom": "^16.4.0",
     "mermaid-render": "^1.0.8",
+    "prismjs": "^1.21.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
