--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.0",
+    "@angular-devkit/build-ng-packagr": "^0.1002.0",
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@commitlint/cli": "^12.1.4",
